--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <div class = "container">
     <div class = "header">
       <span class = "title">
-        <img src="svg+xml.svg" style="width:105px;">
-        <br>
-        <span class = "titleText">Image Gallery - Drag and drop images to re-order</span>
+        <img src="svg+xml.svg" style="width:110px;">
+        <span class = "titleText">Image Gallery<br> <span>Drag and drop images to re-order</span></span>
       </span>
     </div>
     <div class = "gallery">
